installer/k8s-artefacts/observability/sp/sp-worker.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wso2sp-worker
  labels:
    app: wso2sp-worker
    node: wso2sp-worker
    pattern: wso2sp-pattern-distributed
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: wso2sp-worker
        node: wso2sp-worker
        pattern: wso2sp-pattern-distributed
    spec:
      containers:
      -
        image: wso2cellery/sp-worker
        name: wso2sp-worker
        imagePullPolicy: Always
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "2Gi"
        command: ['sh', '-c', sleep 40 && /home/wso2carbon/init.sh]
        env:
        -
          name: WSO2_SERVER_PROFILE
          value: "worker"
        -
          name: OFFSET
          value: "0"
        -
          name: RECEIVER_NODE
          value: "false"
        -
          name: NODE_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        -
          name: NODE_PORT
          value: "9443"

        ports:
        -
          containerPort: 9091
          protocol: "TCP"
        -
          containerPort: 9092
          protocol: "TCP"
        -
          containerPort: 9411
          protocol: "TCP"
        -
          containerPort: 9443
          protocol: "TCP"
        -
          containerPort: 9090
          protocol: "TCP"
        -
          containerPort: 7611
          protocol: "TCP"
        -
          containerPort: 7711
          protocol: "TCP"
        -
          containerPort: 9611
          protocol: "TCP"
        -
          containerPort: 9711
          protocol: "TCP"
        -
          containerPort: 7443
          protocol: "TCP"
        -
          containerPort: 9123
          protocol: "TCP"

        volumeMounts:
        - name: sp-worker-conf
          mountPath: "/home/wso2carbon/wso2-config-volume/conf/worker/"
        - name: sp-worker-siddhi
          mountPath: "/home/wso2carbon/wso2-artifact-volume/wso2/worker/deployment/siddhi-files/"

        livenessProbe:
          tcpSocket:
            port: 9443
          initialDelaySeconds: 300
          periodSeconds: 20
      imagePullSecrets:
      - name: wso2creds
      serviceAccountName: "cellery-stream-processor"
      volumes:
      - name: sp-worker-conf
        configMap:
          name: sp-worker-conf
 #     - name: sp-worker-bin
 #       configMap:
 #         name: sp-worker-bin
      - name: sp-worker-siddhi
        configMap:
          name: sp-worker-siddhi
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: cellery-stream-processor
  namespace: cellery-system
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cellery-stream-processor
rules:
  - apiGroups:
      - ""
    resources:
      - pods
    verbs:
      - list
      - watch
---
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  name: cellery-stream-processor-binding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cellery-stream-processor
subjects:
  - kind: ServiceAccount
    name: cellery-stream-processor
    namespace: cellery-system
---
apiVersion: v1
kind: Service
metadata:
  name: wso2sp-worker
  namespace: cellery-system
  labels:
    app: wso2sp-worker
    node: wso2sp-worker
    pattern: wso2sp-pattern-distributed
spec:
  ports:
    # ports that this service should serve on
    -
      port: 9091
      name: http2
      protocol: TCP
    -
      port: 9092
      name: http
      protocol: TCP
    -
      port: 9411
      name: zipkin
      protocol: TCP
    -
      port: 9443
      name: https-mcgw-upload
      protocol: TCP
    -
      port: 9090
      name: http-mcgw-upload
      protocol: TCP
    -
      port: 7611
      name: tcp-thrift
      protocol: TCP
    -
      port: 7711
      name: tcp-ssl-thrift
      protocol: TCP
    -
      port: 9611
      name: tcp-binary
      protocol: TCP
    -
      port: 9711
      name: tcp-ssl-binary
      protocol: TCP
    -
      port: 7443
      name: http-global-gw
      protocol: TCP
    -
      port: 9123
      name: http-observability-api
      protocol: TCP

  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: wso2sp-worker
    node: wso2sp-worker
    pattern: wso2sp-pattern-distributed
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2sp-worker-ingress
  namespace: cellery-system
  labels:
      node: wso2sp-worker
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: wso2sp-observability-api
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2sp-worker
          servicePort: 9123
